--- a/react/src/app.css
+++ b/react/src/app.css
@@ -1,8 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
 :root {
     color: #333;
     font-family: 'IBM Plex Sans', sans-serif;
     --default-card-colour: #e9ebf7;
+    --action-primary: #2e0e4e;
+    --action-primary-text: #fff;
 }
+
 
 body {
     margin: 0;
@@ -55,12 +60,77 @@ div#root {
     display: inline-block;
 }
 
-legend{
+legend {
     font-size: 0.8rem;
     margin: 0.5rem 0;
 }
-legend div{
+
+legend div {
     height: 0.5rem;
     width: 0.5rem;
     display: inline-block
+}
+
+.chartPanel {
+    display: grid;
+    gap: 0.5rem;
+    justify-items: center;
+}
+
+.chartControls {
+    margin: auto;
+    width: max-content
+}
+
+label {
+    margin: 0 3px 0 1rem;
+}
+
+button {
+    border: 0;
+    border-radius: 3px;
+    font-family: unset;
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+button.iconButton {
+    margin: 0;
+    padding: 5px;
+    background: #00000010;
+}
+
+button.iconButton {
+    margin: 0;
+    padding: 5px;
+    background: #00000020;
+}
+
+button.iconButton img {
+    height: 0.8rem;
+}
+
+button:not(.iconButton) {
+    margin: 0.5rem;
+    padding: 0.5rem 1rem;
+    background: var(--action-primary);
+    color: var(--action-primary-text);
+}
+
+button:not(.iconButton):hover {
+    transform: translateY(-2px);
+    filter: drop-shadow(0px 4px 2px #00000040) brightness(1.5);
+}
+
+div.collapsible {
+    padding: 0.5rem 2rem;
+    position: relative;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+div.fiatLabel {
+    text-align: center;
+    font-size: 0.8rem;
+    font-weight: bold;
 }
